Update Mathematics Major Presentation.tex

--- a/Mathematics Major Presentation.tex
+++ b/Mathematics Major Presentation.tex
@@ -7,11 +7,6 @@
 							% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{amssymb}
 
-%SetFonts
-
-%SetFonts
-
-
 \title{Mathematics Major Presentation}
 \author{Christian Dela Cruz}
 \date{February 02, 2017}							% Activate to display a given date or no date
@@ -23,23 +18,27 @@
 \section{Introduction}
 1) Introduction Statement\\
 2) State Main Purpose: Mathematics Major\\
-3) Main points\par
+3) Main Points\par
 a. Why have I chosen mathematics as a major?\par	
 b. What do I love about math?\par
 c. What is math good for?\\
 \section{Why have I chosen mathematics as a major?}
-1) Favorite subject as a child\par
+1) Favorite subject in Childhood\par
 a. Excelled at young age\\
-2) SkillsUSA Award\\
-3) Academic Journey\par
-a. Career as teacher\\
+2) Academic\par
+a. High School\par
+b. College\par
+c. Career as teacher\\
 \section{What do I love about mathematics?}
-1) Computations\\
+1) Computations\par
+a. "Numbers are easier than words."\\
 2) Exercises the Mind\\
 3) Challenging and Rewarding\\
 \section{What is mathematics good for?}
-1) Applied vs. Pure Mathematics\\
-2) Various methods of thinking\\
+1) Applied vs. Pure Mathematics\par
+a. Applied Math - Real World Situations\par
+b. Pure Math - Statistics, Coding, etc.\\
+2) Analytical and logical way of thinking\\
 3) Universal language\par
 a. "Math is everywhere"\\
 \section{Conclusion}
